objects/Womens_Hormones_Menopause_survey__c.object
<CustomObject>
    <description>Depricated</description>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Womens Hormones Menopause surveys</relationshipLabel>
        <relationshipName>Womens_Hormones_Menopause_surveys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Do_you_currently_take_hormone__c</fullName>
        <label>Do you currently take hormone</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Have_you_ever_used_hormonal__c</fullName>
        <label>Have you ever used hormonal</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Have_you_had_one_or_both_of_your_ovaries__c</fullName>
        <label>Have you had one or both of your ovaries</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Have_you_had_part_or_all_of_your_uterus__c</fullName>
        <label>Have you had part or all of your uterus</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other__c</fullName>
        <label>Other</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Please_estimate_in_years_how_long_you__c</fullName>
        <label>Please estimate in years how long you</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Please_estimate_in_years_how_long_you_to__c</fullName>
        <label>Please estimate in years how long you to</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>What_brand_of_hormone_replacement__c</fullName>
        <label>What brand of hormone replacement</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>What_dose_of_hormone_replacement_therapy__c</fullName>
        <label>What dose of hormone replacement therapy</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>What_hormonal_birth_control__c</fullName>
        <label>What hormonal birth control</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>What_year_did_you_have_your_hysterectomy__c</fullName>
        <label>What year did you have your hysterectomy</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>What_year_did_you_have_your_oophorectomy__c</fullName>
        <label>What year did you have your oophorectomy</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <label>Womens Hormones Menopause survey</label>
    <nameField>
        <displayFormat>WHMS-{0000000000}</displayFormat>
        <label>Womens Hormones Menopause Survey Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Womens Hormones Menopause surveys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>